--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -1,17 +1,13 @@
-auth_plugin /home/jonas/Code/github/iota-demo-python/mosquitto/auth-plug.so
+auth_plugin /root/mosquitto/auth-plug.so
 auth_opt_backends redis
-auth_opt_redis_host 127.0.0.1
+auth_opt_redis_host 172.17.0.1
 auth_opt_redis_port 6379
 auth_opt_redis_userquery GET %s
 auth_opt_redis_aclquery GET %s-%s
-#auth_opt_psk_database mongo
 auth_opt_acl_cacheseconds 10
+auth_opt_superusers provider
 
-port 8883
-cafile /home/jonas/Code/github/iota-demo-python/mosquitto/ca.crt
-keyfile /home/jonas/Code/github/iota-demo-python/mosquitto/server.key
-certfile /home/jonas/Code/github/iota-demo-python/mosquitto/server.crt
-allow_anonymous true
-#use_identity_as_username true
+port 1883
+allow_anonymous false
 
 log_type all
