clean docker-compose project

--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -1,13 +1,19 @@
-auth_plugin /root/mosquitto/auth-plug.so
+user mosquitto
+
+auth_plugin /usr/local/lib/auth-plug.so
 auth_opt_backends redis
-auth_opt_redis_host 172.17.0.1
+auth_opt_redis_host redis
 auth_opt_redis_port 6379
 auth_opt_redis_userquery GET %s
 auth_opt_redis_aclquery GET %s-%s
 auth_opt_acl_cacheseconds 10
-auth_opt_superusers provider
+auth_opt_superusers admin
 
-port 1883
 allow_anonymous false
 
 log_type all
+connection_messages true
+log_timestamp true
+include_dir /etc/mosquitto.d/
+
+port 1883
