--- a/app/Pipfile
+++ b/app/Pipfile
@@ -4,12 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pyota = {editable = true, path = "./../iota.lib.py", extras = ["ccurl"]}
 redis = "*"
 hiredis = "*"
-jupyter = "*"
 pendulum = "*"
-prettytable = "*"
+pyota = {version = "*", extras = ["ccurl"]}
 
 [dev-packages]
 
